--- a/site/index.html
+++ b/site/index.html
@@ -11,35 +11,37 @@
 </head>
 
 <body>
-	<div class="main-container">
-		<h1 class="main-heading"> </h1>
-		<p></p>
-		<ul class="main-list">
-			<li class="main-item">
-				<a href="/pages/habarovsk.html" class="main-link">Хабаровск</a>
-			</li>
-			<li class="main-item">
-				<a href="/pages/chita.html" class="main-link">Чита</a>
-			</li>
-			<li class="main-item">
-				<a href="/pages/moscow.html" class="main-link">Москва</a>
-			</li>
-			<li class="main-item">
-				<a href="/pages/bryansk.html" class="main-link">Брянск</a>
-			</li>
-			<li class="main-item">
-				<a href="/pages/london.html" class="main-link">London - 0000GMT</a>
-			</li>
-			<li class="main-item">
-				<a href="/pages/new-york.html" class="main-link">New York City</a>
-			</li>
-			<li class="main-item">
-				<a href="/pages/la.html" class="main-link">Los-Angeles</a>
-			</li>
-		</ul>
-
-	</div>
-
+	<main>
+		<div class="main-container container">
+			<h1 class="main-heading">Считаем дни до Нового 2024 Года!</h1>
+			<p>Добро пожаловать на эксперементальную страницу начинающего программиста! Сразу спешу поздравить вас с наступающим Новым Годом! Пусть в Мире все будет хорошо! Пусть исполняются Ваши мечты!</p>
+			<p>У меня желание простое - Делать что-то полезное для человечества. И интересное - для себя. Недавно начал изучать FRONTEND-разработку и HTML-верстку. Сразу подумал - Надо к Новому Году что-то придумать. Поэтому пишу сайт с отсчетом времени. В следующем году - будет версия 2.0. "Я не волшебник, я только учусь".</p>
+			<p>А вот и цвет года по краям - Peach Fuzz. So, выберите город, который хотите увидеть и узнать - какое там время: </p>
+			<ul class="main-list">
+				<li class="main-item">
+					<a href="/pages/habarovsk.html" class="main-link">Хабаровск</a>
+				</li>
+				<li class="main-item">
+					<a href="/pages/chita.html" class="main-link">Чита</a>
+				</li>
+				<li class="main-item">
+					<a href="/pages/moscow.html" class="main-link">Москва</a>
+				</li>
+				<li class="main-item">
+					<a href="/pages/bryansk.html" class="main-link">Брянск</a>
+				</li>
+				<li class="main-item">
+					<a href="/pages/london.html" class="main-link">London - 0000GMT</a>
+				</li>
+				<li class="main-item">
+					<a href="/pages/new-york.html" class="main-link">New York City</a>
+				</li>
+				<li class="main-item">
+					<a href="/pages/la.html" class="main-link">Los-Angeles</a>
+				</li>
+			</ul>
+		</div>
+	</main>
 </body>
 
 </html>
